--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <button type="button" class="btn btn-primary">Primary</button>
 
     <script src="./main.js"></script>
 </body>
